--- a/style.css
+++ b/style.css
@@ -21,18 +21,22 @@ html, body {
 
 .hero {
     background: var(--accent);
-    height: 30vh;
-    max-height: 30vh;
+    width: 100%;
+    max-width: 100vw;
+    height: 100%;
+    max-height: 40vh;
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
+    border-bottom: 5px solid var(--accent);
+    box-shadow: 1px 3px 10px rgba(0, 0, 0, 0.2);
 }
 
 .hero > img {
-    width: 80%;
-    height: 100%;
-    object-fit: cover;
+    width: 100%;
+    height: 40vh;
+    object-fit: none;
 }
 
 .top-buttons {
@@ -50,6 +54,25 @@ html, body {
     text-align: center;
     padding: 10px;
     background: var(--accent);
+    border-radius: 10px;
+}
+
+.bottom-buttons {
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.bottom-buttons > i {
+    font-size: 25px;
+    text-align: center;
+    padding: 8px;
+    border: 2px solid var(--accent);
+    color: var(--accent);
     border-radius: 10px;
 }
 
@@ -122,4 +145,19 @@ input:focus {
 
 .popup > .accept-button:hover {
     filter: opacity(.5);
+}
+
+#trend-up {
+    display: none;
+}
+
+#trend-down {
+    display: none;
+}
+
+.weekly {
+    display: flex;
+    border-bottom: solid 2px var(--accent);
+    padding-bottom: 5px;
+    font-size: 12px;
 }
